# avito-tracker

./: .gitignore  Dockerfile  Makefile  Procfile  README.md  amazon_parser.py  amazon_tracker.py  avito_tracker.py  bomber.py  computer_universe_parser.py  docker-compose.yml  parser.py  parser_avito.py  pyproject.toml  requirements.txt
addons/: __init__.py  addons.py
avito/: States.py  avito_tracker.py  telegram_bot.py
avito/data_base/: db.py
avito/telegram/: States.py  keyboards.py  telegram_bot.py
avito_tracker/: create_db.py  install_db.py  misc.py  parser.py  payment.py  telegram_bot.py  tracking.py  validators.py
avito_tracker/addons/: validators.py
avito_tracker/data_base/: DataBase.py  config.py  connection.py  crud.py  db.py  payment.py  tracking.py
avito_tracker/parsing/: parser.py  tracking.py
avito_tracker/telegram/: States.py  handlers.py  initializer.py  keyboards.py  payment.py
bomber/: bomber.py
bot/: Makefile  __init__.py  pyproject.toml  run.py
bot/data/: crystalpay_sdk.py
bot/data_base/: DataBase.py
bot/db/: DataBase.py  __init__.py
bot/parsing/: __init__.py  parser.py  tracking.py
bot/scripts/: install_db.py  reinstall_db.py  uninstall_db.py
bot/telegram/: States.py  __init__.py  callbacks.py  handlers.py  initializer.py  keyboards.py  payment.py  states.py
bot/telegram/handlers/: __init__.py  base.py  faq.py  help.py  rules.py  tasks.py  tracking.py  wallet.py
computer_universe/: addons.py  computer_universe_parser.py
data_base/: db.py
docker/env/: .env.example
scripts/: install_db.py  reinstall_db.py  run.py  uninstall_db.py
telegram/: Procfile  States.py  initializer.py  keyboards.py  telegram_bot.py
