[tool.poetry]
name = "avito-tracker"
version = "0.1.0"
description = ""
authors = ["JMURv <architect.lock@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.23.1"
beautifulsoup4 = "^4.11.1"
asyncio = "^3.4.3"
python-dotenv = "^0.21.0"
asyncpg = "^0.27.0"
loguru = "^0.6.0"
flake8 = "^6.1.0"
requests = "^2.31.0"
selenium = "^4.15.2"
webdriver-manager = "^4.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "scripts.run:main"
